# paystack-transaction

./: Cargo.toml  LICENSE  README.md
src/: accept_payment.rs  cred.rs  error.rs  initialize.rs  lib.rs  verify.rs
src/channels/: mod.rs  types.rs
